Fixed navbar/White space problem. Added committees

--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,700,900');
 
 /*--------- Basic Styles-------*/
-body{
-    padding: 0;
-    margin: 0;
+html, body{
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
     font-family: 'Montserrat', sans-serif;
     font-size: 1rem;
     line-height: 1.5rem;
